Pom build with error v1.1